<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Platys</string>
    <string name="action_settings">Settings</string>
    <string name="link_to_dropbox">Link to Dropbox</string>
    <string name="place_label_hint">Enter place label.</string>
    <string name="submit">Submit</string>
    <string name="mode_choose">Setup the Platys middleware to run in one of the following modes.</string>
    <string name="activity_server_mode_chooser_dropbox_app_folder">Dropbox App Folder</string>
    <string name="activity_server_mode_chooser_dropbox_sharable_folder">Dropbox Sharable Folder</string>
    <string name="activity_server_mode_chooser_dropbox_app_folder_mode_desc">Dropbox app folder mode 
        stores all your information in your private dropbox folder. The app folder cannot be shared. 
        Thus, this mode requires that you set up the Platys reasoner manually on a machine with 
        Dropbox access.</string>
    <string name="activity_server_mode_chooser_dropbox_sharable_folder_mode_desc">Dropbox app folder mode 
        stores all your information in your private dropbox folder. The app folder can be shared.
        Choose this mode if you are participating in Platys evaluation and share the folder with 
        pmuruka@ncsu.edu. You must submit a consent form before choosing this mode.</string>
    <string name="next">Next</string>
    <string name="proceed">Proceed</string>
    <string name="add_place_label">Add Place Label</string>
    <string name="your_place">Labels for my context at</string>
    <string name="new_pace_label_hint">Enter a new place label</string>
    <string name="pick_time">Pick a time</string>
    <string name="include">&quot;include &quot;</string>
    <string name="exclude">&quot;exclude &quot;</string>
    <string name="none">None</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="suggestions">Suggestions</string>
    <string name="suggestion_header_subtitle">(Suggestion source)</string>
    <string name="refresh">Refresh</string>
    <string name="include_hint">accepted suggestions and new labels, and</string>
    <string name="exclude_hint">rejected suggestions.</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="discard">Discard</string>
    <string name="place_suggestion">Place Suggestion</string>
    <string name="add_place">Add place</string>
    <string name="places">Places</string>
    <string name="sensors">Sensors</string>
    <string name="apps">Apps</string>
    <string name="PlacesFragment_add_place_alert_title">Add Place</string>
    <string name="PlacesFragment_add_place_alert_message">A place label could describe a spatial or 
        social aspect, user activity, or emotion associated with the place.</string>
    <string name="place_label_description">Enter a new place label.</string>
    <string name="title_activity_dbx_mode_chooser">DbxModeChooserActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_software_updater">SoftwareUpdaterActivity</string>
    <string name="activity_software_updater_heading">Updating Platys software!</string>
    <string name="activity_software_updater_subheading">Please wait while the data is backed up&#8230;</string>
    <string name="activity_software_updater_internet_warning">You must be connected to the Internet.</string>

</resources>