<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <RelativeLayout
        android:id="@+id/rlWrapperHeaderPlacesFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ibTimePickPlacesFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/pick_time"
            android:padding="5dp"
            android:src="@drawable/ic_dark_device_access_time" />

        <View
            android:id="@+id/vDividerPickTimePlacesFragment"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ibTimePickPlacesFragment"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@id/ibTimePickPlacesFragment"
            android:background="?android:attr/dividerVertical" />

        <TextView
            android:id="@+id/tvHeaderPlacesFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/etTimePlacesFragment"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/your_place"
            android:textAppearance="?android:attr/textAppearance" />

        <EditText
            android:id="@+id/etTimePlacesFragment"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/vDividerPickTimePlacesFragment"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tvHeaderPlacesFragment"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="time"
            android:textAppearance="?android:attr/textAppearance" 
            android:textStyle="italic" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlIncludeWrapperPlacesFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlWrapperHeaderPlacesFragment"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvIncludePlacesFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/include"
            android:textAppearance="?android:attr/textAppearance" />

        <ImageButton
            android:id="@+id/ibAddPlacePlacesFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/add_place"
            android:padding="5dp"
            android:src="@drawable/ic_dark_collections_new_label" />

        <EditText
            android:id="@+id/etIncludeListPlacesFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/ibAddPlacePlacesFragment"
            android:layout_toRightOf="@id/tvIncludePlacesFragment"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/include_hint"
            android:textAppearance="?android:attr/textAppearance"
            android:textStyle="italic" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llIsNotWrapperPlacesFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlIncludeWrapperPlacesFragment"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvExcludePlacesFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exclude"
            android:textAppearance="?android:attr/textAppearance" />

        <EditText
            android:id="@+id/etExcludeListPlacesFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/exclude_hint"
            android:textAppearance="?android:attr/textAppearance"
            android:textStyle="italic" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/vHDivider1PlacesFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llIsNotWrapperPlacesFragment"
        android:background="@android:color/darker_gray" >

        <LinearLayout
            android:id="@+id/llWrapperSuggestionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvHeaderPlaceSuggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/suggestions"
                android:textAppearance="?android:attr/textAppearance"
                android:textStyle="bold" />

            <!--
            <TextView
            android:id="@+id/tvSubtitleSuggestionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/suggestion_header_subtitle"
            android:textAppearance="?android:attr/textAppearanceSmall" />
            -->

        </LinearLayout>

        <ImageButton
            android:id="@+id/ibRefershPlaceSuggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/refresh"
            android:padding="5dp"
            android:src="@drawable/ic_dark_navigation_refresh" />

        <View
            android:id="@+id/vDividerRefreshPlaceSuggestionsHeader"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ibRefershPlaceSuggestions"
            android:layout_centerVertical="true"
            android:layout_margin="4dp"
            android:layout_toLeftOf="@id/ibRefershPlaceSuggestions"
            android:background="?android:attr/dividerVertical" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lvSuggestionsPlacesFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/vHDivider1PlacesFragment" >
    </ListView>

    <!--
    <RelativeLayout
        android:id="@+id/rlWrapperNewLabelPlacesFagment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="4dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:background="?android:attr/dividerVertical" />

        <ImageButton
            android:id="@+id/ibNewLabelPlacesFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/add_place_label"
            android:src="@drawable/ic_dark_collections_new_label" />

        <View
            android:id="@+id/vDividerNewLabelPlacesFragment"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ibNewLabelPlacesFragment"
            android:layout_alignParentTop="true"
            android:layout_margin="4dp"
            android:layout_toLeftOf="@id/ibNewLabelPlacesFragment"
            android:background="?android:attr/dividerVertical" />

        <EditText
            android:id="@+id/etNewLabelPlacesFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/vDividerNewLabelPlacesFragment"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:hint="@string/new_pace_label_hint"
            android:textAppearance="?android:attr/textAppearance" />
    </RelativeLayout>
    -->

</RelativeLayout>